--- a/views/index.edge
+++ b/views/index.edge
@@ -10,15 +10,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     <style>
       body {
-         background-image: url("https://abbank.vn/uploads/images/2020/09/11/online-banking-1440x550.jpg");
-      }
+         background-image: 
+         url("https://abbank.vn/uploads/images/2020/09/11/online-banking-1440x550.jpg");
+           background-repeat: no-repeat;
+           background-size: cover;
+            background-color:#089de3; 
+          -moz-background-size:cover;
+           -webkit-background-size:cover;
+               }
       .justify-content-end > .nav-item > a {
        color: black;
-      }
+      }  
     </style>
-  </head>
+</head>
 <body>
- 
 <nav class="navbar navbar-lg  bg-$grey-200">
      <span class="navbar-brand mb-0  ml-2 h1"><b><i>Sparks Bank</i></b></span>
          <ul class="nav justify-content-end">
@@ -32,18 +37,21 @@
               <a class="nav-link" href="/history">Transaction History</a>
             </li>
          </ul>
-  </nav>
+</nav>
 <div style="text-align: left; width: 1000px; padding:150px">
-    <h1><b>Welcome To Sparks Bank</b></h1>
-  </div>
+    <h1><b><i>Welcome To Sparks Bank</i></b></h1>
 </div>
-<footer class="page-footer font-small fixed-bottom">
+
+
+ <footer class="page-footer font-small fixed-bottom">
         <div class="footer-copyright text-center py-3 " >© 2021Copyright:All Rights Reserved
-           <a><br>K Pranavi,The Sparks Foundation </a>
-       </div>
-        </footer>
+           <a><br>K Pranavi,The Sparks Foundation 
+ </a>
+
+  </div>
+</footer>
     
-</body>
+      </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
