--- a/views/index.edge
+++ b/views/index.edge
@@ -8,47 +8,67 @@
     <title>Basic Banking System</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
       body {
          background-image: 
          url("https://abbank.vn/uploads/images/2020/09/11/online-banking-1440x550.jpg");
            background-repeat: no-repeat;
            background-size: cover;
-            background-color:#089de3; 
+            background-color:lightblue; 
           -moz-background-size:cover;
            -webkit-background-size:cover;
-               }
-      .justify-content-end > .nav-item > a {
-       color: black;
-      }  
+               }    
     </style>
 </head>
 <body>
-<nav class="navbar navbar-lg  bg-$grey-200">
-     <span class="navbar-brand mb-0  ml-2 h1"><b><i>Sparks Bank</i></b></span>
-         <ul class="nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link active" href="/">Home</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg:light">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0  ml-2 h1"><b><i>Sparks Bank</i></b></span>
+      
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item mr-3">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/transfermoney">View Customers</a>
+            <a class="nav-link mr-3" href="/transfermoney">View Customers</a>
           </li>
-          <li class="nav-item">
-              <a class="nav-link" href="/history">Transaction History</a>
-            </li>
+          <li class="nav-item mr-2">
+            <a class="nav-link" href="/history">Transaction History</a>
+          </li>
          </ul>
-</nav>
+      </div>
+    </div>
+  </nav>
 <div style="text-align: left; width: 1000px; padding:150px">
-    <h1><b><i>Welcome To Sparks Bank</i></b></h1>
+    <h1><b><i> Welcome To Sparks Bank</i></b></h1>
+    <div class="ml-5">
+    <h5><i>Experience the freedom of banking on</i></h5>
+    <div class="ml-5">
+      <h5><i> your own terms with Sparks Bank...</i></h5>
+    </div>
+    </div>
 </div>
 
 
  <footer class="page-footer font-small fixed-bottom">
-        <div class="footer-copyright text-center py-3 " >© 2021Copyright:All Rights Reserved
-           <a><br>K Pranavi,The Sparks Foundation 
- </a>
-
+  <div class="text-center">
+      Contact Us:
+      <a target="_blank" class="github" href="https://github.com/pranavikondra"><i class="fab fa-github fa-2x"></i></a>
+      <a target="_blank" class="linkedin ml-2" href="https://www.linkedin.com/in/pranavi-kondra-3b06531ab/"><i class="fab fa-linkedin fa-2x"></i></a>
   </div>
+ <div class="footer-copyright text-center py-3 " >© 2021Copyright:All Rights Reserved
+       <a><br>K Pranavi,The Sparks Foundation </a>
+  </div>
+  
 </footer>
     
       </body>
