--- a/views/transactionhistory.edge
+++ b/views/transactionhistory.edge
@@ -10,34 +10,37 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     
-    <style>
-    .justify-content-end > .nav-item > a {
-     color: black;
-    }
-    </style>
 </head>
 <body  style="background-color:powderblue;">
-  
-<nav class="navbar navbar-lg bg-$indigo-600">
-  <span class="navbar-brand  mb-0 ml-3 h1"><b><i>Sparks Bank</i></b></span>
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link active" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" href="/transfermoney">View Customers</a>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-$grey">
+  <div class="container-fluid">
+    <span class="navbar-brand mb-0  ml-2 h1"><b><i>Sparks Bank</i></b></span>
+    
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item mr-3">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/history">Transaction History</a>
+          <a class="nav-link mr-3" href="/transfermoney">View Customers</a>
         </li>
-      </ul>
+        <li class="nav-item mr-2">
+          <a class="nav-link" href="/history">Transaction History</a>
+        </li>
+       </ul>
+    </div>
+  </div>
 </nav>
  @if(unsuccess)
  <div class="container text-center mt-4">
  <h5><u><i><b>Transaction Status</b></i></u></h5>
  </div>
 <div class="alert alert-warning alert-dismissible fade show mt-5 ml-3 mr-5" role="alert">
- <strong>Transaction Failed..!!  </strong>  Your Transaction Amount Exceeds Your Balance..!!!
+ <strong>☹️Transaction Failed..!!  </strong>  Your Transaction Amount Exceeds Your Balance..!!!
   </div>
   @elseif(notsame)
   {
@@ -87,11 +90,12 @@
 
  }
  @endif
- <footer class="page-footer font-small ">
+<footer class="page-footer font-small ">
+   
          <div class="footer-copyright text-center py-3">© 2021Copyright:All Rights Reserved
             <a><br>K Pranavi,The Sparks Foundation </a>
         </div>
- </footer>
+</footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
