updating index filr

--- a/views/index.edge
+++ b/views/index.edge
@@ -16,7 +16,7 @@
     <style>
       body {
          background-image: 
-         url("https://abbank.vn/uploads/images/2020/09/11/online-banking-1440x550.jpg");
+         url("https://bit.ly/3zlElbu");
            background-repeat: no-repeat;
            background-size: cover;
             background-color:lightblue; 
@@ -65,13 +65,13 @@
       <a target="_blank" class="github" href="https://github.com/pranavikondra"><i class="fab fa-github fa-2x"></i></a>
       <a target="_blank" class="linkedin ml-2" href="https://www.linkedin.com/in/pranavi-kondra-3b06531ab/"><i class="fab fa-linkedin fa-2x"></i></a>
   </div>
- <div class="footer-copyright text-center py-3 " >© 2021Copyright:All Rights Reserved
+  <div class="footer-copyright text-center py-3 " >© 2021Copyright:All Rights Reserved
        <a><br>K Pranavi,The Sparks Foundation </a>
   </div>
   
-</footer>
+ </footer>
     
-      </body>
+</body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
