--- a/views/index.edge
+++ b/views/index.edge
@@ -15,8 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
       body {
-         background-image: 
-         url("https://bit.ly/3zlElbu");
+         background-image: url('images/bank-bg.png');
            background-repeat: no-repeat;
            background-size: cover;
             background-color:lightblue; 
