--- a/views/index.edge
+++ b/views/index.edge
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,shrink-to-fit=no">
+    <meta name=viewport content='width=1000'>
     <link rel="SHORTCUT ICON" href="https://bit.ly/3zaWTel"/>
     <title>Basic Banking System</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -13,16 +14,8 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
-      body {
-         background-image: url('images/bank-bg.png');
-           background-repeat: no-repeat;
-           background-size: cover;
-            background-color:lightblue; 
-          -moz-background-size:cover;
-           -webkit-background-size:cover;
-               }    
-    </style>
+    <link rel="stylesheet" href="stylesheets/style.css"/>
+   
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg:light">
@@ -47,7 +40,7 @@
       </div>
     </div>
   </nav>
-<div style="text-align: left; width: 1000px; padding:150px">
+<div class="main">
     <h1><b><i> Welcome To Sparks Bank</i></b></h1>
     <div class="ml-5">
     <h5><i>Experience the freedom of banking on</i></h5>
